# context-engine

./: .gitignore  CHANGELOG.md  LICENSE  PLAN-3DAYS.md  README.md  RELEASE-ASSETS.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml
benchmarks/: benchmark_cases.md  benchmark_results.md  generate_benchmarks.py
examples/code/: sample.json
examples/logs/: expected.json
examples/rag/: sample.json
src/context_engine/: __init__.py  api.py  budget.py  cli.py  errors.py  mcp_server.py  pipeline.py  schemas.py  validators.py
src/context_engine/compressors/: __init__.py  code.py  logs.py  rag.py
tests/: test_api.py  test_budget.py  test_cli.py  test_errors.py  test_mcp_server.py  test_pipeline.py  test_schemas.py
tests/fixtures/code/: resume_failure.json
tests/fixtures/rag/: incident_mixed.json
