[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melonelish-context-engine"
version = "0.1.0"
description = "Task-aware context compression for logs, RAG, and coding workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "melonelish"},
]
keywords = ["llm", "rag", "mcp", "agents", "context-compression", "ai-coding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]
mcp = [
  "fastmcp>=3.4,<4",
]

[project.urls]
Homepage = "https://github.com/melonelish/context-engine"
Repository = "https://github.com/melonelish/context-engine"
Issues = "https://github.com/melonelish/context-engine/issues"

[project.scripts]
context-engine = "context_engine.cli:app"
context-engine-mcp = "context_engine.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
